--- a/static/css/style.css
+++ b/static/css/style.css
@@ -254,9 +254,6 @@ main{
     color: white;
     margin: 15px auto;
 }
-.box3 p{
-    margin-bottom: 5%;
-}
 .box3 a{
     padding: 5px 20px;
     background-color: rgb(0, 217, 255);
@@ -298,5 +295,8 @@ main{
     }
     .reverse{
         flex-direction:row-reverse !important;
+    }
+    .fit-content{
+        height: fit-content!important;
     }
 }
